# Lab5-PADT

./: .gitignore  CMakeLists.txt  Makefile  README.md  imgui.ini
data/: demo.sqlite3  demo_seed.sql  departments.csv  orders.csv  users.csv
docs/: iteration1_dsl_ast.md  iteration2_optimizer.md  iteration3_backends.md  ui.md
include/: common.h  io_streams.h  ops.h  predicate.h  query_optimizer.h  relational_op.h  sequence.h  simple_array.h  table_source.h  visitor.h
include/ast/: nodes.h  printers.h  query_optimizer.h  relational_expr.h  visitor.h
include/ast/detail/: nodes.tpp  printers.tpp  query_optimizer.tpp  relational_expr.tpp
include/backend/: predicate_evaluator.h  query_result.h  source_catalog.h
include/backend/csv/: csv_backend.h  csv_parser.h
include/backend/sql/: compiled_sql.h  sql_compiler.h  sqlite_backend.h
include/common/: sequence_utils.h  string_sequence.h  table_source.h
include/common/detail/: string_sequence.tpp  table_source.tpp
include/core/: array_sequence.h  dynamic_array.h  ienumerator.h  linked_list.h  list_sequence.h  menu.h  option.h  sequence.h  utils.h
include/core/detail/: array_sequence.tpp  dynamic_array.tpp  linked_list.tpp  list_sequence.tpp
include/dsl/: predicate.h  query.h
include/dsl/detail/: predicate.tpp  query.tpp
include/query_optimizer/: query_optimizer.h
include/streams/: base.h  file.h  live_file.h  sequence.h  stream.h
include/streams/detail/: base.tpp  file.tpp  lazy.tpp  live_file.tpp  sequence.tpp
include/visitor/: expr_utils.h  visitor.h
src/: common.cpp  io_streams.cpp  main.cpp  ops.cpp  query_optimizer.cpp  table_source.cpp  utils.cpp
src/ast/: nodes.cpp  printers.cpp  relational_expr.cpp
src/backend/: predicate_evaluator.cpp  query_result.cpp  source_catalog.cpp
src/backend/csv/: csv_backend.cpp  csv_parser.cpp
src/backend/sql/: compiled_sql.cpp  sql_compiler.cpp  sqlite_backend.cpp
src/common/: sequence_utils.cpp  table_source.cpp
src/dsl/: predicate.cpp  query.cpp
src/query_optimizer/: query_optimizer.cpp
src/visitor/: expr_utils.cpp
tests/: ast_tests.cpp  backend_tests.cpp  core_tests.cpp  optimizer_tests.cpp  stream_tests.cpp
